--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,24 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "@emotion/cache": "11.11.0",
+    "@emotion/server": "11.11.0",
+    "@fontsource/inter": "5.0.17",
+    "@fontsource/plus-jakarta-sans": "5.0.19",
+    "@fontsource/roboto-mono": "5.0.17",
+    "@hookform/resolvers": "3.3.4",
+    "@mui/lab": "5.0.0-alpha.167",
+    "@mui/system": "5.15.12",
+    "@mui/utils": "5.15.12",
+    "@mui/x-date-pickers": "6.19.6",
+    "@phosphor-icons/react": "2.0.15",
+    "apexcharts": "3.46.0",
+    "dayjs": "1.11.10",
+    "next": "14.1.3",
+    "react-apexcharts": "1.4.1",
+    "react-hook-form": "7.51.0",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
