--- a/app/package.json
+++ b/app/package.json
@@ -14,13 +14,19 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.14",
     "@mui/x-charts": "^7.0.0",
+    "@supabase/supabase-js": "^2.39.8",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.1",
+    "openai": "^4.29.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
